# Digital-Fingerprint-Analysis

./: CMakeLists.txt  README.md
data/durationFunctions/: imageFilling.txt  morphologicalFilterBin_MF_DILATION_CROSS.txt  morphologicalFilterBin_MF_NONE.txt  rainEffect.txt  rectangleFill.txt  swirlImage.txt
data/results/: constructor.txt  corr_function_rotation.txt  corr_function_rotation10.txt  corr_function_rotation2.txt  corr_function_rotation6.txt  histogram.txt  interclassvariance.txt  loss_function_translation1.txt
documentation/: CMakeLists.txt  doxyfilerc
documentation/latex/: cost_8cpp.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  image_8cpp.tex  morpho__filter_8cpp.tex  namespaceplots.tex  namespaces.tex  plots_8py.tex  refman.tex  temporary_8cpp.tex  utils_8cpp.tex  warp_8cpp.tex
src/: cost.cpp  image.cpp  morpho_filter.cpp  plots.py  utils.cpp  warp.cpp
test/: morpho_test.cpp  optimization.cpp  showCaseImageEffects.cpp  warp_test.cpp
